# GammaRoutingModel

./: README.md  build_gamma.sh  doc_plugin.py  makefile  requirements-dev.txt
differentiation/: Makefile  make_adjoint.sh
src/f90/: AADJ_b.f90  ATLM_d.f90  control.f90  cost_function.f90  generic_subroutine_gamma_function.f90  generic_subroutine_gamma_routing.f90  gradient_test.f90  mod_gamma_function.f90  mod_gamma_interface.f90  mod_gamma_routing.f90  mod_gamma_sorting.f90  mod_routing_memory.f90  mod_routing_mesh.f90  mod_routing_parameters.f90  mod_routing_results.f90  mod_routing_setup.f90  mod_routing_states.f90  routing.f90  run_forward.f90
src/f90wrap/: kind_map
src/py/: MANIFEST.in  pyproject.toml  setup.py
src/py/exp_cance_ardeche/: exp_cance_ardeche.py  launcher_run.sh
src/py/gamma/: __init__.py
src/py/gamma/core/: __init__.py  model.py
src/py/gamma/smashplug/: coupling.py
src/py/gamma/wrapping/: __init__.py
src/py/gamma_routing_model/: __init__.py
src/py/gamma_routing_model/core/: model.py
src/py/gamma_routing_model/libfgamma/: __init__.py  libfgamma.py
src/py/gamma_routing_model/smashplug/: __init__.py  coupling.py  functions_smash_stats.py  plot.py
src/py/test/: Exp_CalVal_Cance.py  Exp_CalVal_Routage_Cance.py  Exp_Gamma.py  Exp_Gamma_calibration.py  Exp_Gamma_calibration_inflows.py  Exp_Jumelles_Cance.py  Exp_calibration_smash_llr.py  Exp_coupling.py  Exp_coupling_base.py  Exp_coupling_calibration.py  Exp_coupling_calibration_gamma.py  Exp_coupling_calibration_smash.py  functions_smash_plot.py  functions_smash_time.py
(+1 files in other folders)
